Journey 3: Optimize your Vector Index for Scale